infra/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`home.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: homepage
          port: http
  tls:
    secretName: cert-k-joshuachp-dev
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
